--- a/SnapKiller.glyphsPlugin/Contents/Info.plist
+++ b/SnapKiller.glyphsPlugin/Contents/Info.plist
@@ -17,15 +17,15 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>UpdateFeedURL</key>
 	<string>https://raw.githubusercontent.com/mekkablue/SnapKiller/master/SnapKiller.glyphsPlugin/Contents/Info.plist</string>
 	<key>productPageURL</key>
 	<string>https://github.com/mekkablue/SnapKiller</string>
 	<key>productReleaseNotes</key>
-	<string>Initial Commit.</string>
+	<string>Added Spanish localisation (thx @SolMatas).</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright, Rainer Erich Scheichelbauer, 2018</string>
 	<key>NSPrincipalClass</key>
