--- a/SnapKiller.glyphsPlugin/Contents/Info.plist
+++ b/SnapKiller.glyphsPlugin/Contents/Info.plist
@@ -3,9 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundleDisplayName</key>
-	<string>SnapKiller</string>
+	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>plugin</string>
 	<key>CFBundleIdentifier</key>
@@ -14,25 +12,23 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>SnapKiller</string>
-	<key>CFBundlePackageType</key>
-	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.4</string>
+	<string>1.0.5</string> <!-- 1.0 -->
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>6</string> <!-- 123 -->
+	<key>UpdateFeedURL</key>
+	<string>https://raw.githubusercontent.com/mekkablue/SnapKiller/master/SnapKiller.glyphsPlugin/Contents/Info.plist</string>
+	<key>productPageURL</key>
+	<string>https://github.com/mekkablue/SnapKiller</string>
+	<key>productReleaseNotes</key>
+	<string>Updated binaries.</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright, Rainer Erich Scheichelbauer, 2018</string>
 	<key>NSPrincipalClass</key>
 	<string>SnapKiller</string>
 	<key>PyMainFileNames</key>
 	<array>
-		<string>../MacOS/main.py</string>
+		<string>plugin.py</string>
 	</array>
-	<key>UpdateFeedURL</key>
-	<string>https://raw.githubusercontent.com/mekkablue/SnapKiller/master/SnapKiller.glyphsPlugin/Contents/Info.plist</string>
-	<key>productPageURL</key>
-	<string>https://github.com/mekkablue/SnapKiller</string>
-	<key>productReleaseNotes</key>
-	<string>update binary files for Glyphs3</string>
 </dict>
 </plist>
